--- a/counter-app/package.json
+++ b/counter-app/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^5.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
+    "serializr": "^1.5.1",
     "style-loader": "0.23.1",
     "styled-components": "^4.2.0",
     "terser-webpack-plugin": "1.2.2",
